--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     color: var(--dark-cyan);
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
-    font: 16px;
+    font: 14px;
     text-align: center;
 }
 
@@ -29,8 +29,8 @@ img, svg, picture{
 }
 
 h1{
+    font-family: "Poppins", serif;
     font-weight: 700;
-    padding-top: 100px;
 }
 
 h2{
@@ -39,7 +39,9 @@ h2{
 }
 
 h3{
-    font-family: "Poppins", serif; 
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    padding-top: 70px;
 }
 
 h4{
@@ -55,12 +57,15 @@ h4{
 }
 
 .para2{
-    color: var(--dark-cyan);
+    color: silver;
     padding-top: 5px;
 }
 
 .para3{
     font-size: 14px;
+    font-weight: 500;
+    line-height: 1.5;
+    padding-top: 15px;
 }
 
 .para4{
@@ -86,6 +91,11 @@ h4{
     width: 99px;
 }
 
+.section-one{
+    padding-top: 100px;
+    margin-bottom: -30px;
+}
+
 .btn{
     background-color: white;
     color: var(--light-pink);
@@ -106,7 +116,7 @@ h4{
     border-radius: 100px;
     color: var(--pale-lue);
     /* box-shadow: 0 4px 8px rgba(191, 191, 191, 0.2), 0 6px 20px rgba(191, 191, 191, 0.2); */
-    padding: 12px 40px;
+    padding: 12px 35px;
     font-weight: 700;
     font-size: 13px;
     margin: 10px 0;
@@ -117,7 +127,7 @@ h4{
 }
 
 .intro-img{
-    padding: 80px 0;
+    padding: 85px 0;
 }
 
 .communities-icon{
@@ -150,6 +160,18 @@ h4{
     background-color: var(--pale-lue);
     margin-top: -5px;
 }
+
+.section-three{
+    padding: 120px 0;
+}
+.section-four{
+    padding: 20px 0 110px 0;
+}
+
+.section-five{
+    padding: 50px 0 230px 0;
+}
+
 
 .section-footer{
     background-color: var(--dark-cyan);
