--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     font-weight: 400;
     font: 14px;
     text-align: center;
+    padding-top: 25px;
 }
 
 img, svg, picture{
@@ -39,6 +40,7 @@ h2{
 }
 
 h3{
+    font-size: 20px;
     font-family: "Poppins", serif;
     font-weight: 700;
     padding-top: 70px;
@@ -48,6 +50,7 @@ h4{
     font-size: 25px;
     font-variant-caps: all-petite-caps;
     font-weight: 600;
+    letter-spacing: 1px;
 }
 
 .para1{
@@ -57,8 +60,10 @@ h4{
 }
 
 .para2{
-    color: silver;
+    color: rgb(136, 136, 136);
     padding-top: 5px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .para3{
@@ -98,8 +103,8 @@ h4{
 
 .btn{
     background-color: white;
-    color: var(--light-pink);
-    border: 1px solid var(--light-pink);
+    color: var(--pink);
+    border: 1px solid var(--pink);
     border-radius: 100px;
     padding: 5px 18px;
     font-size: 11px;
@@ -107,7 +112,8 @@ h4{
 
 .btn:hover{
     box-shadow: 0 0 0.2rem var(--light-pink); 
-
+    color: var(--light-pink);
+    border: 1px solid var(--light-pink);
 }
 
 .btn-1{
@@ -115,7 +121,7 @@ h4{
     border: none;
     border-radius: 100px;
     color: var(--pale-lue);
-    /* box-shadow: 0 4px 8px rgba(191, 191, 191, 0.2), 0 6px 20px rgba(191, 191, 191, 0.2); */
+    box-shadow: 0 2px 2px 3px rgba(190, 190, 190, 0.2), 0 6px 20px rgba(190, 190, 190, 0.2);
     padding: 12px 35px;
     font-weight: 700;
     font-size: 13px;
@@ -149,27 +155,25 @@ h4{
 .section-two{
     background-color: var(--pale-lue);
     margin-top: -5px;
-    padding: 50px 0;
+    padding: 60px 0;
 }
 
 .curve-top, .curve-btm{
     width: 100vw;    
 }
 
+.section-three{
+    padding: 130px 0 110px 0;
+}
+
 .section-four{
     background-color: var(--pale-lue);
     margin-top: -5px;
-}
-
-.section-three{
-    padding: 120px 0;
-}
-.section-four{
-    padding: 20px 0 110px 0;
+    padding: 0 0 120px 0;
 }
 
 .section-five{
-    padding: 50px 0 230px 0;
+    padding: 70px 0 220px 0;
 }
 
 
@@ -215,6 +219,11 @@ h4{
     font-size: 14px;
     font-weight: 600;
     font-family: "Open Sans", sans-serif;
+}
+
+.btn-2:hover{
+    color: var(--light-pink);
+    border: 1px solid var(--light-pink);
 }
 
 .logo-icon{
