--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h4{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 20px;
 }
 
 .logo-img{
@@ -107,7 +108,7 @@ h4{
     color: var(--pink);
     border: 1px solid var(--pink);
     border-radius: 100px;
-    padding: 5px 18px;
+    padding: 6px 20px;
     font-size: 11px;
 }
 
