--- a/style.css
+++ b/style.css
@@ -82,9 +82,8 @@ h4{
 
 .container{
     width: 90%;
-    max-width: 21.4rem;
+    max-width: 19.5rem;
     margin: 0 auto;
-    padding: 0 15px;
 }
 
 .header{
@@ -185,6 +184,7 @@ h4{
     margin-top: -6px;
     text-align: start;
     padding: 50px 0;
+    margin-top: -1;
 }
 
 .newsletter{
