--- a/style.css
+++ b/style.css
@@ -383,14 +383,14 @@ h4{
     padding-top: 100px;
 }
 .btn-1{
-    padding: 27px 80px;
-    font-size: 22px;
+    padding: 25px 80px;
+    font-size: 18px;
     letter-spacing: 1px;
 }
 
 .section-five{
     text-align: center;
-    padding: 100px 0;
+    padding: 170px 0;
 }
 
 .section-footer{
@@ -416,7 +416,7 @@ h4{
 }
 
 .logo-img {
-    width: 240px;
+    width: 220px;
 }
 
 .logo-icon{
@@ -428,14 +428,13 @@ h4{
 }
 
 .btn{
-    font-size: 21px;
-    padding: 12px 37px;
+    font-size: 16px;
+    padding: 12px 35px;
 }
 
 h1{
-    font-size: 50px;
+    font-size: 40px;
 }
-
 
 h2{
     font-size: 130px;
@@ -447,8 +446,12 @@ h3{
 }
 
 .para1{
-    font-size: 25px;
-    max-width: 47rem;
+    font-size: 20px;
+    max-width: 40rem;
+}
+
+.para2{
+    font-size: 35px;
 }
 
 .para3{
@@ -482,5 +485,6 @@ h3{
     margin: 0;
     font-size: 18px;
     padding: 16px 48px;
+    border-radius: 7px;
 }
 }
