--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1{
 }
 
 h2{
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 700;
 }
 
@@ -319,13 +319,8 @@ h2{
 }
 
 h4{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 700;
-}
-
-.flowing{
-    display: block;
-    margin-inline: auto;
 }
 
 .para1{
@@ -410,6 +405,10 @@ h4{
 }
 
 @media only screen and (min-width: 1200px){
+body{
+    padding-top: 75px;
+}
+
 .container{
     width: 100%;
     max-width: 85%;
@@ -419,12 +418,8 @@ h4{
     width: 220px;
 }
 
-.logo-icon{
-    width: 240px;
-}
-
 .bg-pattern{
-    width: 1000px;
+    width: 800px;
 }
 
 .btn{
@@ -433,15 +428,11 @@ h4{
 }
 
 h1{
-    font-size: 40px;
-}
-
-h2{
-    font-size: 130px;
+    font-size: 45px;
 }
 
 h3{
-    font-size: 43px;
+    font-size: 33px;
     font-weight: 700;
 }
 
@@ -451,17 +442,17 @@ h3{
 }
 
 .para2{
-    font-size: 35px;
+    font-size: 20px;
 }
 
 .para3{
-    font-size: 18px;
-    max-width: 47rem;
+    font-size: 16px;
+    max-width: 33rem;
 }
 
 .para4{
-    font-size: 17px;
-    max-width: 25rem;
+    font-size: 16px;
+    max-width: 23.5rem;
 }
 
 .footer-form{
@@ -470,21 +461,5 @@ h3{
 
 #email{
     margin-right: 35px;
-}
-
-.btn-1{
-    padding: 37px 130px;
-}
-
-#email{
-    width: 24rem;
-    padding: 22px;
-}
-
-.btn-2{
-    margin: 0;
-    font-size: 18px;
-    padding: 16px 48px;
-    border-radius: 7px;
 }
 }
