--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ h4{
 
 .para1{
     font-size: 14px;
-    font-weight: 500;
     padding: 0 0 40px 0;
 }
 
@@ -64,12 +63,10 @@ h4{
     color: rgb(136, 136, 136);
     padding-top: 5px;
     font-size: 14px;
-    font-weight: 500;
 }
 
 .para3{
     font-size: 13.5px;
-    font-weight: 500;
     line-height: 1.5;
     padding-top: 15px;
 }
@@ -420,7 +417,7 @@ body{
 
 .btn{
     font-size: 16px;
-    padding: 12px 35px;
+    padding: 8px 35px;
 }
 
 h1{
@@ -457,5 +454,9 @@ h3{
 
 #email{
     margin-right: 35px;
+}
+
+.newsletter{
+    margin-left: 150px;
 }
 }
