--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ h4{
 .section-two{
     background-color: var(--pale-lue);
     margin-top: -5px;
-    padding: 60px 0;
+    padding: 50px 0;
 }
 
 .curve-top, .curve-btm{
@@ -291,6 +291,8 @@ body{
 }
 .row{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: auto;
 }
 
@@ -362,7 +364,7 @@ h4{
 }
 
 .section-one{
-    padding: 200px 0;
+    padding: 150px 0;
     text-align: center;
 }
 
@@ -417,7 +419,7 @@ body{
 
 .btn{
     font-size: 16px;
-    padding: 8px 35px;
+    padding: 10px 30px;
 }
 
 h1{
