--- a/style.css
+++ b/style.css
@@ -266,9 +266,14 @@ h4{
 .social-icons ul{
     display: flex;
 }
+
 .social-icons li{
     list-style-type: none;
     margin-right: 25px;
+}
+
+.social-icons li a{
+    color: var(--pale-lue);
 }
 
 .fab{
@@ -371,7 +376,7 @@ h4{
 }
 
 .section-one{
-    padding: 185px 0 150px 0;
+    padding: 188px 0 150px 0;
     text-align: center;
 }
 
@@ -383,6 +388,10 @@ h4{
     padding: 25px 80px;
     font-size: 18px;
     letter-spacing: 1px;
+}
+
+.section-three{
+    padding-top: 150px;
 }
 
 .section-five{
@@ -421,8 +430,8 @@ body{
 }
 
 .bg-pattern{
-    margin-top: 20px;
-    width: 950px;
+    padding-top: 40px;
+    width: 1000px;
 }
 
 .btn{
